# BioStage

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: deps.py  routes.py
backend/application/: auth_service.py  channels_service.py  post_editor_service.py  settings_service.py
backend/bot/: telegram_runtime.py
backend/core/: config.py
backend/database/: models.py  session.py
backend/domain/: schemas.py
backend/infrastructure/: repositories.py
backend/repositories/: interfaces.py
backend/tests/: test_auth_service.py  test_post_editor_service.py
frontend/: Dockerfile  package.json
frontend/components/: LoginForm.jsx  LogsPanel.jsx  PreviewPanel.jsx  SettingsForm.jsx
frontend/pages/: index.jsx
frontend/services/: api.js
